--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.14",
     "bcryptjs": "^2.4.3",
+    "bulma": "^0.9.4",
     "chart.js": "^4.2.1",
     "connect-mongo": "^4.6.0",
     "cors": "^2.8.5",
